...
                <Label htmlFor="password">New password</Label>
              </View>
              <Input
                id="password"
                secureTextEntry
                onChangeText={setPassword}
                returnKeyType="next"
                submitBehavior="submit"
                onSubmitEditing={onPasswordSubmitEditing}
              />
              {error.password ? (
                <Text className="font-medium text-destructive text-sm">{error.password}</Text>
              ) : null}
...
